--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_std.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_std.htm
@@ -528,26 +528,16 @@ Wisdom
      <td align="center" class="font7"><b>+</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_SizeMod.INTVAL.SIGN|<br /></b></td>
      <td align="center" class="font7"><b>+</b></td>
-     <td align="center" class="border10"><b><br /></b></td>
+     <td align="center" class="border10"><b>+0<br /></b></td>
      <td align="center" class="font7"><b>+</b></td>
      <td align="center" class="border10"><b>|VAR.CMB-ATTACK.MELEE.BASE-VAR.CMB_STAT-VAR.CMB_SizeMod.INTVAL.SIGN|<br /></b></td>
      <td align="center" class="font7"><b>+</b></td>
      <td align="center" class="tempborder"><br /></td>
     </tr>
-    <tr><td></td></tr>
    </table>
    <table width="100%" summary="CMB block">
     <tr>
-     <td align="center"></td>
-     <td align="center" valign="bottom" class="font4">GRAPPLE</td>
-     <td align="center" valign="bottom" class="font4">TRIP</td>
-     <td align="center" valign="bottom" class="font4">DISARM</td>
-     <td align="center" valign="bottom" class="font4">SUNDER</td>
-     <td align="center" valign="bottom" class="font4">BULL RUSH</td>
-     <td align="center" valign="bottom" class="font4">OVERRUN</td>
-    </tr>
-    <tr>
-     <td align="center" bgcolor="black"><font style="font-size:10pt" color="white"><b>CMB OFFENSE</b></font></td>
+     <td align="center" bgcolor="black"><font style="font-size:10pt" color="white"><b>OFFENSE</b></font></td>
      <td align="center" class="border10"><b>|VAR.CMB_Grapple.INTVAL.SIGN|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Trip.INTVAL.SIGN|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Disarm.INTVAL.SIGN|</b></td>
@@ -556,13 +546,22 @@ Wisdom
      <td align="center" class="border10"><b>|VAR.CMB_Overrun.INTVAL.SIGN|</b></td>
     </tr>
     <tr>
-     <td align="center" bgcolor="black"><font style="font-size:10pt" color="white"><b>CMB DEFENSE</b></font></td>
+     <td align="center" bgcolor="black"><font style="font-size:10pt" color="white"><b>DEFENSE</b></font></td>
      <td align="center" class="border10"><b>|VAR.CMB_Grapple_DEF.INTVAL|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Trip_DEF.INTVAL|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Disarm_DEF.INTVAL|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Sunder_DEF.INTVAL|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Bull_DEF.INTVAL|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Overrun_DEF.INTVAL|</b></td>
+    </tr>
+    <tr>
+     <td align="center" width="28%"></td>
+     <td align="center" width="12%" valign="bottom" class="font4">GRAPPLE</td>
+     <td align="center" width="12%" valign="bottom" class="font4">TRIP</td>
+     <td align="center" width="12%" valign="bottom" class="font4">DISARM</td>
+     <td align="center" width="12%" valign="bottom" class="font4">SUNDER</td>
+     <td align="center" width="12%" valign="bottom" class="font4">BULL RUSH</td>
+     <td align="center" width="12%" valign="bottom" class="font4">OVERRUN</td>
     </tr>
    </table>
    <br />
