--- a/preview/d20/fantasy/Standard.htm
+++ b/preview/d20/fantasy/Standard.htm
@@ -627,7 +627,7 @@ Wisdom
      <td align="center" class="sign"><b>+</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_SizeMod.INTVAL.SIGN|</b></td>
      <td align="center" class="sign"><b>+</b></td>
-     <td align="center" class="border10"><b></b></td>
+     <td align="center" class="border10"><b>+0</b></td>
      <td align="center" class="sign"><b>+</b></td>
      <td align="center" class="border10"><b>|VAR.CMB-ATTACK.MELEE.BASE-VAR.CMB_STAT-VAR.CMB_SizeMod.INTVAL.SIGN|</b></td>
      <td align="center" class="sign"><b>+</b></td>
@@ -637,16 +637,7 @@ Wisdom
    </table>
    <table width="100%" summary="CMB block">
     <tr>
-     <td align="center"></td>
-     <td align="center" valign="bottom" class="lable">GRAPPLE</td>
-     <td align="center" valign="bottom" class="lable">TRIP</td>
-     <td align="center" valign="bottom" class="lable">DISARM</td>
-     <td align="center" valign="bottom" class="lable">SUNDER</td>
-     <td align="center" valign="bottom" class="lable">BULL RUSH</td>
-     <td align="center" valign="bottom" class="lable">OVERRUN</td>
-    </tr>
-    <tr>
-     <td align="center" class="ab"><b>CMB OFFENSE</b></td>
+     <td align="center" class="ab"><b>OFFENSE</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Grapple.INTVAL.SIGN|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Trip.INTVAL.SIGN|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Disarm.INTVAL.SIGN|</b></td>
@@ -655,13 +646,22 @@ Wisdom
      <td align="center" class="border10"><b>|VAR.CMB_Overrun.INTVAL.SIGN|</b></td>
     </tr>
     <tr>
-     <td align="center" class="ab"><b>CMB DEFENSE</b></td>
+     <td align="center" class="ab"><b>DEFENSE</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Grapple_DEF.INTVAL|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Trip_DEF.INTVAL|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Disarm_DEF.INTVAL|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Sunder_DEF.INTVAL|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Bull_DEF.INTVAL|</b></td>
      <td align="center" class="border10"><b>|VAR.CMB_Overrun_DEF.INTVAL|</b></td>
+    </tr>
+    <tr>
+     <td align="center" width="28%"></td>
+     <td align="center" width="12%" valign="top" class="lable">GRAPPLE</td>
+     <td align="center" width="12%" valign="top" class="lable">TRIP</td>
+     <td align="center" width="12%" valign="top" class="lable">DISARM</td>
+     <td align="center" width="12%" valign="top" class="lable">SUNDER</td>
+     <td align="center" width="12%" valign="top" class="lable">BULL RUSH</td>
+     <td align="center" width="12%" valign="top" class="lable">OVERRUN</td>
     </tr>
    </table>
    <br />
