--- a/preview/d20/fantasy/preview.html
+++ b/preview/d20/fantasy/preview.html
@@ -531,6 +531,57 @@
 													<td class="center bold font7">+</td>
 													<td class="center border2 bor_col_light"><br /></td>
 												</tr>
+|IIF(GAMEMODE:Pathfinder)|
+												<tr>
+													<td class="center border2 color_header bor_col_dark">CMB</td>
+													<td class="center border2 color_hilite bor_col_dark">|VAR.CMB.INTVAL.SIGN|</td>
+													<td class="center bold font7">=</td>
+													<td class="center border2 bor_col_dark">|ATTACK.MELEE.BASE|</td>
+													<td class="center bold font7">+</td>
+													<td class="center border2 bor_col_dark">|VAR.CMB_STAT.INTVAL.SIGN|</td>
+													<td class="center bold font7">+</td>
+													<td class="center border2 bor_col_dark">|VAR.CMB_SizeMod.INTVAL.SIGN|</td>
+													<td class="center bold font7">+</td>
+													<td class="center border2 bor_col_dark">|VAR.CMB-ATTACK.MELEE.BASE-VAR.CMB_STAT-VAR.CMB_SizeMod.INTVAL.SIGN|</td>
+													<td class="center bold font7">+</td>
+													<td class="center border2 bor_col_dark">+0</td>
+													<td class="center bold font7">+</td>
+													<td class="center border2 bor_col_light"><br /></td>
+												</tr>
+												<tr>
+													<td></td>
+												</tr>
+											</table>
+										   <table width="100%" summary="CMB block">
+											    <tr>
+												     <td align="center" class="center border2 color_header bor_col_dark">OFFENSE</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Grapple.INTVAL.SIGN|</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Trip.INTVAL.SIGN|</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Disarm.INTVAL.SIGN|</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Sunder.INTVAL.SIGN|</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Bull.INTVAL.SIGN|</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Overrun.INTVAL.SIGN|</td>
+											    </tr>
+											    <tr>
+												     <td align="center" class="center border2 color_header bor_col_dark">DEFENSE</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Grapple_DEF.INTVAL|</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Trip_DEF.INTVAL|</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Disarm_DEF.INTVAL|</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Sunder_DEF.INTVAL|</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Bull_DEF.INTVAL|</td>
+												     <td align="center" class="center border2 color_hilite bor_col_dark">|VAR.CMB_Overrun_DEF.INTVAL|</td>
+											    </tr>
+											    <tr>
+												     <td align="center" width="28%"></td>
+												     <td align="center" width="12%" valign="top" class="center bottom font7">GRAPPLE</td>
+												     <td align="center" width="12%" valign="top" class="center bottom font7">TRIP</td>
+												     <td align="center" width="12%" valign="top" class="center bottom font7">DISARM</td>
+												     <td align="center" width="12%" valign="top" class="center bottom font7">SUNDER</td>
+												     <td align="center" width="12%" valign="top" class="center bottom font7">BULL RUSH</td>
+												     <td align="center" width="12%" valign="top" class="center bottom font7">OVERRUN</td>
+											    </tr>
+										   </table>
+|ELSE|
 												<tr>
 													<td class="center border2 color_header bor_col_dark">GRAPPLE</td>
 													<td class="center border2 color_hilite bor_col_dark">|ATTACK.GRAPPLE.TOTAL.SHORT|</td>
@@ -551,6 +602,7 @@
 													<td></td>
 												</tr>
 											</table>
+|ENDIF|
 <!-- STOP Melee and Range Attack Table -->
 										</td>
 									</tr>
