--- a/preview/d20/fantasy/statblock_SRD.htm
+++ b/preview/d20/fantasy/statblock_SRD.htm
@@ -147,6 +147,14 @@ Tower Shield,
 |ENDIF|
 ) touch |AC.Touch|, flatfooted |AC.Flatfooted|</td>
   </tr>
+
+|IIF(GAMEMODE:Pathfinder)|
+  <tr valign="top">
+    <td width="25%"><b>Base Attack/CMB: </b></td>
+    <td width="75%">|VAR.BAB.INTVAL.SIGN|/|VAR.CMB.INTVAL.SIGN|
+    </td>
+  </tr>
+|ELSE|
   <tr valign="top">
     <td width="25%"><b>Base Attack/Grapple: </b></td>
     <td width="75%">|VAR.BAB.INTVAL.SIGN|/
@@ -157,6 +165,7 @@ Tower Shield,
 |ENDIF|   
     </td>
   </tr>
+|ENDIF|
 
   <tr valign="top">
     <td width="25%"><b>Full Attack: </b></td>
