Added support for switching between using 3.5 Grapple and Pathfinder CMB systems via a Houserule
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9551 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock4.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock4.htm
@@ -405,7 +405,7 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 
 <br><b>Face</b> |FACE| <b>Reach</b> |REACH|<br>
 <b>Base Atk</b> |ATTACK.MELEE.BASE|; 
-|IIF(GAMEMODE:Pathfinder)|
+|IIF(VAR.UseCombatManueverBonus:1)|
 <b>Combat Manuever Bonus</b> |VAR.CMB.INTVAL.SIGN|
 |ELSE|
 <b>Grp</b> 
