--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_compact.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_compact.htm
@@ -680,7 +680,7 @@ Wisdom
 					<td align="center" class="font7"><b>+</b></td>
 					<td align="center" class="tempborder"><br /></td>
 				</tr>
-|IIF(GAMEMODE:Pathfinder)|
+|IIF(VAR.UseCombatManueverBonus:1)|
     <tr>
      <td align="center" bgcolor="black"><font style="font-size:10pt" color="white"><b>CMB</b></font><font style="font-size:5pt" color="white"><br />ATTACK BONUS</font></td>
      <td align="center" class="border9"><b>|VAR.CMB.INTVAL.SIGN|</b></td>
