--- a/installers/release-notes/pcgen-release-notes-51514.html
+++ b/installers/release-notes/pcgen-release-notes-51514.html
@@ -175,6 +175,7 @@ mailing list with a prefix of [PFRPG] in the subject line please.
 <ul>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2536558">2536558</a> ]	[Pathfinder RPG] Barbarian rage abilities</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2536570">2536570</a> ]	[Pathfinder RPG] Implement Monk Class</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2536588">2536588</a> ]	[Pathfinder RPG] Wands</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2536599">2536599</a> ]	[Pathfinder RPG] Web Enhancement</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2634941">2634941</a> ]	[Paizo] Second Darkness Player's Guide: Traits</li>
 </ul>
@@ -194,7 +195,7 @@ mailing list with a prefix of [PFRPG] in the subject line please.
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2099863">2099863</a> ]	Preview Sheet getting False Error report</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2541582">2541582</a> ]	Converter has memory leak</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2601284">2601284</a> ]	AbilityRefChoiceSet ignores STACKS</li>
-<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2645528">2645528</a> ]	NAMEOPT:NOTHING inserting &#039;/&#039;  when used multiple times</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2645528">2645528</a> ]	NAMEOPT:NOTHING inserting '/'  when used multiple times</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2650827">2650827</a> ]	Skill points not being assigned by kit</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2655716">2655716</a> ]	ABILITY Kit tag broken</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2655742">2655742</a> ]	War Domain CHOOSE doesn't add Prof or Feat</li>
