Update release notes for recent changes
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9632 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/installers/release-notes/pcgen-release-notes-5160RC1.html
+++ b/installers/release-notes/pcgen-release-notes-5160RC1.html
@@ -214,6 +214,8 @@ For full details of the new changes in 5.16, see the <a href="#ChangeLog516">Cha
 
 <ul>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2536586">2536586</a> ]	[Pathfinder RPG] Scrolls review</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2601149">2601149</a> ]	[Pathfinder RPG] Implement Weapon training fully</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2677421">2677421</a> ]	[Paizo] Implement Community Use Policy</li>
 </ul>
 
 <h3>Code Bugs</h3>
@@ -481,8 +483,10 @@ For full details of the new changes in 5.16, see the <a href="#ChangeLog516">Cha
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2536599">2536599</a> ]	[Pathfinder RPG] Web Enhancement</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2549812">2549812</a> ]	[Pathfinder RPG] Implement Paladin Class</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2570874">2570874</a> ]	Remove HASSUBCLASS tags from data</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2601149">2601149</a> ]	[Pathfinder RPG] Implement Weapon training fully</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2601152">2601152</a> ]	[Pathfinder RPG] Weapons Training (Close) for Unarmed</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2634941">2634941</a> ]	[Paizo] Second Darkness Player&#039;s Guide: Traits</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2677421">2677421</a> ]	[Paizo] Implement Community Use Policy</li>
 </ul>
 
 <h3>New Release Steps</h3>
