Add latest changes to release notes.
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10365 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/installers/release-notes/pcgen-release-notes-5170.html
+++ b/installers/release-notes/pcgen-release-notes-5170.html
@@ -35,8 +35,9 @@ Please give it a shot and let us know how it works for you.
 <ul>
 <li><img alt="update" title="update" src="http://pcgen.sourceforge.net/autobuilds/images/update.gif"> CHOOSE:SKILLS|x tag expansion. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=1001527">1001527</a> (<a href="http://pcgen.sourceforge.net/team-list.html#thpr">thpr</a>)</li>
 <li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif">  New deity chooser. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=1738608">1738608</a> (<a href="http://pcgen.sourceforge.net/team-list.html#thpr">thpr</a>)</li>
-<li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif">  Add command line PDF generation docs. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2788979">2788979</a> (<a href="http://pcgen.sourceforge.net/team-list.html#satinknights">satinknights</a>)</li>
-<li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif">  New HTML sheets for laptops for use at table. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2821635">2821635</a> (<a href="http://pcgen.sourceforge.net/team-list.html#maredudd800">:maredudd800</a>)</li>
+<li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif">  Add command line PDF generation docs. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2788979">2788979</a> (<a href="http://pcgen.sourceforge.net/team-list.html#maredudd800">maredudd800</a>)</li>
+<li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif">  New HTML sheets for laptops for use at table. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2821635">2821635</a> (<a href="http://pcgen.sourceforge.net/team-list.html#satinknights">satinknights</a>)</li>
+<li><img alt="add" title="add" src="http://pcgen.sourceforge.net/autobuilds/images/add.gif">  New exe for easier running in Vista and WIndows 7. Fixes <a href="http://sourceforge.net/support/tracker.php?aid=2847155">2847155</a> (<a href="http://pcgen.sourceforge.net/team-list.html#jdempsey">jdempsey</a>)</li>
 </ul>
 <p>
 For full details of the new changes in this release, see the <a href="#ChangeLog">Change Log</a> .
@@ -156,6 +157,7 @@ For full details of the new changes in this release, see the <a href="#ChangeLog
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2713309">2713309</a> ]	Campaign contains runtime information (clone issue)</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2713314">2713314</a> ]	PObjects contain local fields - move to CDOMObject</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2715783">2715783</a> ]	Make .FORGET editor friendly</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2847155">2847155</a> ]	Create windows exe with launch4j</li>
 </ul>
 
 <h3>Documentation Feature Requests</h3>
@@ -191,6 +193,8 @@ For full details of the new changes in this release, see the <a href="#ChangeLog
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2837352">2837352</a> ]	Custom Items loaded too late</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2844282">2844282</a> ]	Unable to add Skills [Latest Builds]</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2844646">2844646</a> ]	AUTO:WEAPONPROF data store failure</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2847102">2847102</a> ]	NPE - SVN 10331</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2847105">2847105</a> ]	NPE - SVN 10331 (Alignment)</li>
 </ul>
 
 <h3>Documentation Bugs</h3>
