Fantasy: Add Deflection bonus to AC Breakdown Issue#: 2876462
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10695 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/preview/d20/fantasy/preview.html
+++ b/preview/d20/fantasy/preview.html
@@ -155,6 +155,8 @@
 										<td class="center bold">&nbsp;+&nbsp;</td>
 										<td class="center border2 bor_col_dark">|AC.NaturalArmor|</td>
 										<td class="center bold">&nbsp;+&nbsp;</td>
+										<td class="center border2 bor_col_dark">|AC.Deflection|</td>
+										<td class="center bold">&nbsp;+&nbsp;</td>
 										<td class="center border2 bor_col_dark">|AC.Misc|</td>
 										<td>&nbsp;</td>
 										<td class="center border2 bor_col_dark"><input type="text" /></td>
@@ -184,7 +186,9 @@
 										<td>&nbsp;</td>
 										<td width="25" class="center top font5">Size</td>
 										<td>&nbsp;</td>
-										<td width="25" class="center top font5">Natural</td>
+										<td width="25" class="center top font5">Natural<br />Armor</td>
+										<td>&nbsp;</td>
+										<td width="25" class="center top font5">Deflection</td>
 										<td>&nbsp;</td>
 										<td width="25" class="center top font5">Misc</td>
 										<td>&nbsp;</td>
