Fantasy: Add Deflection bonus to AC Breakdown Issue#: 2876462
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10696 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/preview/d20/fantasy/compact.htm
+++ b/preview/d20/fantasy/compact.htm
@@ -265,6 +265,8 @@ $Date$
 					<td align="center" class="font7"><b>+</b></td>
 					<td align="center" class="border9"><b>|AC.NaturalArmor|</b></td>
 					<td align="center" class="font7"><b>+</b></td>
+					<td align="center" class="border9"><b>|AC.Deflection|</b></td>
+					<td align="center" class="font7"><b>+</b></td>
 					<td align="center" class="border9"><b>|AC.Misc|</b></td>
 					<td align="center" width="5"></td>
 					<td align="center" class="border9"><br /></td>
@@ -298,6 +300,8 @@ $Date$
 					<td align="center" width="25" class="font4">SIZE<br />BONUS</td>
 					<td align="center"></td>
 					<td align="center" width="25" class="font4">NATURAL<br />ARMOR</td>
+					<td align="center"></td>
+					<td align="center" width="25" class="font4">DEFLECTION<br />BONUS</td>
 					<td align="center"></td>
 					<td align="center" width="25" class="font4">MISC<br />BONUS</td>
 					<td align="center"></td>
