Fantasy: Add Deflection bonus to AC Breakdown -- Fix by adding MISC and Deflection together (with INTVAL). /images/gold/Stats.png would need to be changed to allow another box for Deflection. Issue#: 2876462
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10697 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/preview/d20/fantasy/Fantasy_Character_Sheet.html
+++ b/preview/d20/fantasy/Fantasy_Character_Sheet.html
@@ -303,7 +303,7 @@ $Date$
       <td width="19"></td>
       <td width="29" class="statCentered"><div align="center">|AC.NaturalArmor|</div></td>
       <td width="19"></td>
-      <td width="29" class="statCentered"><div align="center">|AC.Misc|</div></td>
+      <td width="29" class="statCentered"><div align="center">|AC.Misc+AC.Deflection.INTVAL|</div></td>
       <td></td>
     </tr>
     <tr> 
