Fantasy: Add Deflection bonus to AC Breakdown Much easier. :) Issue#: 2876462
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10699 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/preview/d20/fantasy/statblock5.htm
+++ b/preview/d20/fantasy/statblock5.htm
@@ -188,6 +188,10 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 |ELSE|
 |AC.NaturalArmor.SIGN| natural, 
 |ENDIF|
+|IIF(AC.Deflection:0)|
+|ELSE|
+|AC.Deflection.SIGN| deflection, 
+|ENDIF|
 |IIF(AC.Misc:0)|
 |ELSE|
 |AC.Misc.SIGN| misc
