Fantasy: Add Deflection bonus to AC Breakdown Issue#: 2876462
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10700 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/preview/d20/fantasy/statblock_SRD.htm
+++ b/preview/d20/fantasy/statblock_SRD.htm
@@ -117,9 +117,13 @@ th
 |ELSE|
 |AC.NaturalArmor.SIGN| natural, 
 |ENDIF|
+|IIF(AC.Deflection:0)|
+|ELSE|
+|AC.Deflection.SIGN| deflection,
+|ENDIF|
 |IIF(AC.Misc:0)|
 |ELSE|
-|AC.Misc.SIGN| misc
+|AC.Misc.SIGN| misc,
 |ENDIF|
 |IIF(AC.Armor:0)|
 |ELSE|
