Fantasy: Add Deflection bonus to AC Breakdown Issue#: 2876462
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10701 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/preview/d20/fantasy/troubleshooting.htm
+++ b/preview/d20/fantasy/troubleshooting.htm
@@ -66,6 +66,10 @@ $Date$
 |ELSE|
 |AC.NaturalArmor.SIGN|[NATURAL] 
 |ENDIF|
+|IIF(AC.Deflection:0)|
+|ELSE|
+|AC.Deflection.SIGN|[DEFLECTION] 
+|ENDIF|
 |IIF(AC.Misc:0)|
 |ELSE|
 |AC.Misc.SIGN|[MISC]
