Fantasy: Add Deflection bonus to AC Breakdown Issue#: 2876462
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10702 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/preview/d20/fantasy/Standard.htm
+++ b/preview/d20/fantasy/Standard.htm
@@ -429,6 +429,8 @@ $Date$
           <td align="center" class="sign"><b>+</b></td>
           <td align="center" class="abb"><b>|AC.NaturalArmor|</b></td>
           <td align="center" class="sign"><b>+</b></td>
+          <td align="center" class="abb"><b>|AC.Deflection|</b></td>
+          <td align="center" class="sign"><b>+</b></td>
           <td align="center" class="abb"><b>|AC.Misc|</b></td>
           <td align="center" width="5"></td>
           <td align="center" class="abb"><br /></td>
@@ -462,6 +464,8 @@ $Date$
           <td align="center" width="25" class="lable">SIZE<br />BONUS</td>
           <td align="center"></td>
           <td align="center" width="25" class="lable">NATURAL<br />ARMOR</td>
+          <td align="center"></td>
+          <td align="center" width="25" class="lable">DEFLECTION<br />BONUS</td>
           <td align="center"></td>
           <td align="center" width="25" class="lable">MISC<br />BONUS</td>
           <td align="center"></td>
